eks_git/nginx-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: nginx-ingress
 namespace: default
 annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/proxy-body-size: 50m
   nginx.org/client-max-body-size: 50m
spec:
 rules:
   - host: node.customer1.com
     http:
       paths:
       - backend:
           service:
             name: nodejs-service
             port:
               number: 80
         path: /
         pathType: Prefix
   - host: react.customer2.com
     http:
       paths:
       - backend:
           service:
             name: reactjs-service
             port:
               number: 80
         path: /    
         pathType: Prefix
